--- a/aws_seed.yml
+++ b/aws_seed.yml
@@ -338,12 +338,12 @@ Resources:
       KeyPolicy: 
         Version: 2012-10-17
         Statement:
-          - Sid: "Enable IAM User Permissions",
-            Effect: "Allow",
+          - Sid: "Enable IAM User Permissions"
+            Effect: "Allow"
             Principal: 
               AWS: 
                 !Sub "arn:aws:iam::${AWS::AccountId}:root"
-            Action: "kms:*",
+            Action: "kms:*"
             Resource: "*"
           # - Action:
           #     - kms:Decrypt
