Allow cloudformation role to manage KMS key

--- a/aws_seed.yml
+++ b/aws_seed.yml
@@ -61,6 +61,7 @@ Resources:
                   - 'codepipeline:*'
                   - 'iam:*'
                   - 's3:*'
+                  - 'kms:*' 
                 Effect: Allow
                 Resource: '*'
       RoleName: !Ref CloudFormationDeployActionRoleName 
