disable resources - until pipeline has permissions

--- a/aws_seed.yml
+++ b/aws_seed.yml
@@ -175,95 +175,95 @@ Resources:
               InputArtifacts:
                 - Name: !Join ['', [!Ref RepositoryName, 'Source-GH']]
               RunOrder: '1'
-  GetSsmValueLambda:
-    DependsOn:
-    - LogGroupGetSsmValue
-    Properties:
-      Code:
-        ZipFile:
-          Fn::Join:
-          - "\n"
-          - - import cfnresponse, logging, traceback, boto3, datetime, json
-            - from dateutil.tz import tzlocal
-            - ''
-            - ''
-            - 'def parameter_exist(name):'
-            - "    response = boto3.client('ssm').describe_parameters("
-            - "        ParameterFilters=[{"
-            - "            'Key': 'Name',"
-            - "            'Values': ["
-            - "                name"
-            - "            ]"
-            - "        }]"
-            - "    )"
-            - '    return len(response["Parameters"]) > 0'
-            - ''
-            - ''
-            - 'def date_2_string(o):'
-            - "    if isinstance(o, datetime.datetime):"
-            - "        return o.__str__()"
-            - ''
-            - ''
-            - 'def handler(event, context):'
-            - '    logger = logging.getLogger("crypto_cfn")'
-            - "    logger.setLevel(logging.DEBUG)"
-            - "    ch = logging.StreamHandler()"
-            - "    logger.addHandler(ch)"
-            - '    name = event["ResourceProperties"]["Name"]'
-            - "    try:"
-            - ''
-            - '        if event["RequestType"] in ["Create", "Update"]:'
-            - "            if not parameter_exist(name):"
-            - '                raise NameError("A Parameter named {} does not exists".format(name))'
-            - ''
-            - "            response = boto3.client('ssm').get_parameter_history("
-            - "                Name=name,"
-            - "                WithDecryption=True,"
-            - "            )"
-            - ''
-            - "            ret_value = None"
-            - '            if event["ResourceProperties"].get("Version") is not None:'
-            - '                for param in response["Parameters"]:'
-            - '                    if param["Version"] == int(event["ResourceProperties"].get("Version")):'
-            - "                        ret_value = param"
-            - "                        break"
-            - "            else:"
-            - '                ret_value = response["Parameters"][-1]'
-            - ''
-            - "            if ret_value is None:"
-            - '                raise LookupError("Parameter not found")'
-            - '            logger.info("Successfully retrieved parameter {}".format(name))'
-            - ''
-            - "            cfnresponse.send(event, context, cfnresponse.SUCCESS,"
-            - "                             json.loads(json.dumps(ret_value, default=date_2_string)),"
-            - '                             name + str(ret_value["Version"]))'
-            - "        else:"
-            - "            cfnresponse.send(event, context, cfnresponse.SUCCESS, None,
-              name)"
-            - ''
-            - "    except Exception as ex:"
-            - '        logger.error("Faild get parameter value: %s", name)'
-            - '        logger.debug("Stack trace %s", traceback.format_exc())'
-            - '        if event["RequestType"] in ["Create", "Update"]:'
-            - '            cfnresponse.send(event, context, cfnresponse.FAILED, None,
-              "0")'
-            - "        else:"
-            - '            cfnresponse.send(event, context, cfnresponse.SUCCESS, None,
-              "0")'
-      FunctionName:
-        Fn::Join:
-        - "-"
-        - - Ref: AWS::StackName
-          - get-ssm-value
-      Handler: index.handler
-      MemorySize: 1536
-      Role:
-        Fn::GetAtt:
-        - GetSsmValueRole
-        - Arn
-      Runtime: python2.7
-      Timeout: 300
-    Type: AWS::Lambda::Function
+  # GetSsmValueLambda:
+  #   DependsOn:
+  #   - LogGroupGetSsmValue
+  #   Properties:
+  #     Code:
+  #       ZipFile:
+  #         Fn::Join:
+  #         - "\n"
+  #         - - import cfnresponse, logging, traceback, boto3, datetime, json
+  #           - from dateutil.tz import tzlocal
+  #           - ''
+  #           - ''
+  #           - 'def parameter_exist(name):'
+  #           - "    response = boto3.client('ssm').describe_parameters("
+  #           - "        ParameterFilters=[{"
+  #           - "            'Key': 'Name',"
+  #           - "            'Values': ["
+  #           - "                name"
+  #           - "            ]"
+  #           - "        }]"
+  #           - "    )"
+  #           - '    return len(response["Parameters"]) > 0'
+  #           - ''
+  #           - ''
+  #           - 'def date_2_string(o):'
+  #           - "    if isinstance(o, datetime.datetime):"
+  #           - "        return o.__str__()"
+  #           - ''
+  #           - ''
+  #           - 'def handler(event, context):'
+  #           - '    logger = logging.getLogger("crypto_cfn")'
+  #           - "    logger.setLevel(logging.DEBUG)"
+  #           - "    ch = logging.StreamHandler()"
+  #           - "    logger.addHandler(ch)"
+  #           - '    name = event["ResourceProperties"]["Name"]'
+  #           - "    try:"
+  #           - ''
+  #           - '        if event["RequestType"] in ["Create", "Update"]:'
+  #           - "            if not parameter_exist(name):"
+  #           - '                raise NameError("A Parameter named {} does not exists".format(name))'
+  #           - ''
+  #           - "            response = boto3.client('ssm').get_parameter_history("
+  #           - "                Name=name,"
+  #           - "                WithDecryption=True,"
+  #           - "            )"
+  #           - ''
+  #           - "            ret_value = None"
+  #           - '            if event["ResourceProperties"].get("Version") is not None:'
+  #           - '                for param in response["Parameters"]:'
+  #           - '                    if param["Version"] == int(event["ResourceProperties"].get("Version")):'
+  #           - "                        ret_value = param"
+  #           - "                        break"
+  #           - "            else:"
+  #           - '                ret_value = response["Parameters"][-1]'
+  #           - ''
+  #           - "            if ret_value is None:"
+  #           - '                raise LookupError("Parameter not found")'
+  #           - '            logger.info("Successfully retrieved parameter {}".format(name))'
+  #           - ''
+  #           - "            cfnresponse.send(event, context, cfnresponse.SUCCESS,"
+  #           - "                             json.loads(json.dumps(ret_value, default=date_2_string)),"
+  #           - '                             name + str(ret_value["Version"]))'
+  #           - "        else:"
+  #           - "            cfnresponse.send(event, context, cfnresponse.SUCCESS, None,
+  #             name)"
+  #           - ''
+  #           - "    except Exception as ex:"
+  #           - '        logger.error("Faild get parameter value: %s", name)'
+  #           - '        logger.debug("Stack trace %s", traceback.format_exc())'
+  #           - '        if event["RequestType"] in ["Create", "Update"]:'
+  #           - '            cfnresponse.send(event, context, cfnresponse.FAILED, None,
+  #             "0")'
+  #           - "        else:"
+  #           - '            cfnresponse.send(event, context, cfnresponse.SUCCESS, None,
+  #             "0")'
+  #     FunctionName:
+  #       Fn::Join:
+  #       - "-"
+  #       - - Ref: AWS::StackName
+  #         - get-ssm-value
+  #     Handler: index.handler
+  #     MemorySize: 1536
+  #     Role:
+  #       Fn::GetAtt:
+  #       - GetSsmValueRole
+  #       - Arn
+  #     Runtime: python2.7
+  #     Timeout: 300
+  #   Type: AWS::Lambda::Function
   GetSsmValueRole:
     Properties:
       AssumeRolePolicyDocument:
@@ -308,18 +308,18 @@ Resources:
           Version: '2012-10-17'
         PolicyName: ssm
     Type: AWS::IAM::Role
-  LogGroupGetSsmValue:
-    Properties:
-      LogGroupName:
-        Fn::Join:
-        - ''
-        - - "/aws/lambda/"
-          - Fn::Join:
-            - "-"
-            - - Ref: AWS::StackName
-              - get-ssm-value
-      RetentionInDays: 14
-    Type: AWS::Logs::LogGroup
+  # LogGroupGetSsmValue:
+  #   Properties:
+  #     LogGroupName:
+  #       Fn::Join:
+  #       - ''
+  #       - - "/aws/lambda/"
+  #         - Fn::Join:
+  #           - "-"
+  #           - - Ref: AWS::StackName
+  #             - get-ssm-value
+  #     RetentionInDays: 14
+  #   Type: AWS::Logs::LogGroup
   # GithubOAuthToken:
   #   Properties:
   #     KeyId:
