--- a/aws_seed.yml
+++ b/aws_seed.yml
@@ -284,7 +284,7 @@ Resources:
             - kms:Decrypt
             Effect: Allow
             Resource:
-            - Ref: CodepipelineKmsKey
+            - !GetAtt CodepipelineKmsKey.Arn
           Version: '2012-10-17'
         PolicyName: decrypt
       - PolicyDocument:
