update readme to trigger a build - should be picked up and run through the pipeline

--- a/aws_seed.yml
+++ b/aws_seed.yml
@@ -175,6 +175,7 @@ Resources:
               InputArtifacts:
                 - Name: !Join ['', [!Ref RepositoryName, 'Source-GH']]
               RunOrder: '1'
+  # Courtesy of https://github.com/nordcloud/cfn-encrypt
   GetSsmValueLambda:
     DependsOn:
     - LogGroupGetSsmValue
